force-app/main/default/objects/Application_Stage_Change__e/Application_Stage_Change__e.object-meta.xml
<CustomObject>
    <label>Application Stage Change</label>
    <pluralLabel>Applications Stage Change</pluralLabel>
</CustomObject>