force-app/main/default/objects/Application_Stage_Change__e/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <label>Application Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>