force-app/main/default/objects/Application_Stage_Change__e/fields/Candidate_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Full_Name__c</fullName>
    <label>Candidate Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>