force-app/main/default/objects/Application_Stage_Change__e/fields/Job_Requisition_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition_Title__c</fullName>
    <label>Job Requisition Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>